Fixed arrows alignment issues. The overall style of the arrows was changed, to account for slight differences between different browser's pixel measurements.

--- a/src/mdfserver/static/mdfserver/css/custom_style.css
+++ b/src/mdfserver/static/mdfserver/css/custom_style.css
@@ -164,7 +164,6 @@ div ul {
     position: absolute;
     left: 7px;
     /* top: 6%;*/
-    top: 0.11cm;
 }
 
 #site_select {
@@ -193,17 +192,45 @@ div ul {
 }
 
 .carousel-control.right span {
-    margin-left: 9px;
+    /*margin-left: 9px;
+    left: 2px;*/
+    margin-left: 13px;
     left: 2px;
+    background: black;
+    width: 131%;
+    height: 87.5%;
+    padding-top: 58%;
+    padding-bottom: 23%;
+    border-radius: 43px;
+    padding-right: 121px;
+    padding-left: 1px;
+    border: 3px white solid;
+}
+
+.carousel-control.left span {
+    margin-left: -149px;
+    left: 2px;
+    background: black;
+    width: 131%;
+    height: 87.5%;
+    padding-top: 58%;
+    padding-bottom: 23%;
+    border-radius: 43px;
+    padding-right: 1px;
+    padding-left: 121px;
+    border: 3px white solid;
 }
 
 .carousel-control {
-    top: 46%;
+    top: 42%;
     padding-top: 4px;
     padding-right: 5px;
     width: 33px;
     height: 35px;
     border-radius: 71px;
+    border: none;
+    background: transparent;
+    !important
 }
 
 .carousel-caption {
@@ -652,6 +679,7 @@ ul.gamut_list {
     height: 310px;
     text-align: center;
     width: 66%;
+    overflow: hidden;
 }
 
 #data-watershed-gallery {
